# py-wwpdb_utils_dp

./: .gitignore  .gitlab-ci.yml  .gitmodules  ArchiveIoBase.py  ArchiveIoSftp.py  ArchiveIoSftpTests.py  ConfigInfo.py  CvsAdmin.py  CvsAdminTests.py  CvsUtility.py  CvsUtilityTests.py  DataExchange.py  DataFile.py  DataFileAdapter.py  DataFileTests.py  DataMaintenance.py  DataMaintenanceTests.py  DetachUtils.py  FormatOut.py  GraphicsContext3D.py  HISTORY.txt  LoadRemindMessageTrack.py  MANIFEST.in  MultiProcUtil.py  MultiProcUtilTests.py  PathInfo.py  PathInfoTests.py  PdbxChemShiftReport.py  PdbxStripCategory.py  README.md  RcsbDpUtil.py  RcsbDpUtilExamples.py  RcsbDpUtilTests.py  RcsbDpUtility.py  RcsbDpUtilityAnnotTests.py  RcsbDpUtilityEmTests.py  RcsbDpUtilityMapTests.py  RcsbDpUtilityNMRTests.py  RcsbDpUtilityPisaTests.py  RcsbDpUtilityRunRemoteTests.py  (+22 more)
Archive/: ArchiveIoSftp.py  CvsAdminTests.py  CvsUtilityTests.py  DataFileTests.py  DataMaintenanceTests.py  DetachUtils.py  GraphicsContext3DTests.py  MultiProcUtil.py  MultiProcUtilTests.py  PathInfo.py  PdbxChemShiftReport.py  UtilDataStore.py  WebAppWorkerBase.py  WebDownloadUtils.py  WebRequest.py  WrapperExampleTests.py  mmCIFUtil.py  wfStatusDbLoader.py
data/: 1KIP.fasta  1MM0.cif  1cbs-sf.cif  1j59.cif  1o3q.cif-org  2MM4-cs.cif  2MM4.cif  2MMZ-cs.cif  2MMZ.cif  2MMZ.mr  2MMZ_cs.str  2WDK.fasta  2WDK.fasta-large  2mmz-cs-file-full-2.cif  3RUN.cif  3rer_assembly-assign_P1.cif  3rij.cif  4u4r-sf.cif  D_1000200391_model_P1.cif.V27  D_1000225739_model_P1.cif.V4  D_1200000237_model_P1.cif.V1  D_900002_model_P1.cif  RCSB078488.fasta  RCSB095269_model_P1.cif.V1  RCSB095269_seq-assign_P1.cif.V1  bad-runaway.cif  bad-runaway.mtz  bmr16703_3.cif  cor_16703_test.cif  emd_5127.map  emd_8137_v2.xml  mtz-bad.mtz  mtz-good.mtz  rcsb013067-cc-assign.cif  rcsb013067-cc-link.cif  rcsb013067.cifeps  rcsb033781.cif  rcsb033781.cifeps  rcsb070236.cif  rcsb070236.cif-org  (+2 more)
dp/: RcsbDpUtil.py  RcsbDpUtilTests.py  RcsbDpUtilityEmTests.py  RcsbDpUtilityMapTests.py  RcsbDpUtilitySeqTests.py
tests/: COMTests.py  DensityGenerationCommonTests.py  ImportTests.py  PdbxMergeTests.py  PdbxModelComplexityTests.py  PdbxSFMapCoefTests.py  RcsbDpUtilityAnnotTests.py  RcsbDpUtilityEmTests.py  RcsbDpUtilityMapTests.py  RcsbDpUtilityMetalTests.py  RcsbDpUtilityMetal_tests.py  RcsbDpUtilityNMRTests.py  RcsbDpUtilityPisaTests.py  RcsbDpUtilityRunRemoteTests.py  RcsbDpUtilitySeqTests.py  RcsbDpUtilityTests.py  ValidationWrapperTests.py  XrayDensityGenerationTests.py  commonsetup.py
tests/test_files/: 2gc2_validation_2fo-fc_map_coef.cif  2gc2_validation_fo-fc_map_coef.cif  4DHV-internal.cif
wwpdb/utils/dp/: CentreOfMass.py  DataFileAdapter.py  DensityWrapper.py  DepositorSyncUtil.py  JobLogging.py  PdbxChemShiftReport.py  PdbxMergeCategory.py  PdbxModelComplexity.py  PdbxSFMapCoefficients.py  PdbxStripCategory.py  RcsbDpUtility.py  RunRemote.py  ValidationWrapper.py  __init__.py
wwpdb/utils/dp/electron_density/: common_functions.py  em_density_map.py  x_ray_density_map.py
wwpdb/utils/dp/metal/findgeo/: parseFindGeo.py  processFindGeo.py  runFindGeo.py
wwpdb/utils/dp/metal/metal_ref/: CCD_exception_list.csv  coord_classes_mapping_abbr.csv  coord_classes_mapping_abbr.xlsx  metal_coordination_number.csv  metal_oxidation_state.csv
wwpdb/utils/dp/metal/metal_util/: readRef.py  run_command.py
wwpdb/utils/dp/metal/metalcoord/: parseMetalCoord.py  processMetalCoordStats.py  processMetalCoordUpdate.py  runAcedrg.py  runMetalCoord.py  runServalcat.py
wwpdb/utils/dp/metal/tests/test_data/: 0KA.cif  0KA_acedrg.cif  0KA_acedrg_metalcoord.cif
wwpdb/utils/dp/metal/tests/unit_test/: testProcessFindGeo.py  testProcessMetalCoordStats.py  testProcessMetalCoordUpdate.py
wwpdb/utils/dp/pcm/: checks.py  cvs.py  intmmcif.py  ligand.py  mmcif.py  parse.py  pcm.py  pcm_remediation.py  pcm_util.py  site.py
wwpdb/utils/tests-dp/: COMTests.py  DensityGenerationCommonTests.py  ImportTests.py  PcmTests.py  PdbxMergeTests.py  PdbxModelComplexityTests.py  PdbxSFMapCoefTests.py  RcsbDpUtilityAnnotTests.py  RcsbDpUtilityEmTests.py  RcsbDpUtilityMapTests.py  RcsbDpUtilityNMRTests.py  RcsbDpUtilityPisaTests.py  RcsbDpUtilityRunRemoteTests.py  RcsbDpUtilitySeqTests.py  RcsbDpUtilityTests.py  ValidationWrapperTests.py  XrayDensityGenerationTests.py  commonsetup.py
wwpdb/utils/tests-dp/test_files/: 2gc2.cif
